--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -16,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.2.0",
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1"
   }
