--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -19,6 +19,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^10.2.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
     "swagger-jsdoc": "^6.2.8",
