--- a/web_front/.env copy
+++ b/web_front/.env copy
@@ -1,2 +1,3 @@
 REACT_APP_API_URL= http://127.0.0.1:5000
 REACT_APP_CLOUDINARY_URL= http://api.cloudinary.com/v1_1/nom_cloud/image/upload
+REACT_APP_UPLOAD_PRESET = PRESET_NAME
